force-app/main/default/objects/Account/fields/A_la_carte_cancelled__c.field-meta.xml
<CustomField>
    <fullName>A_la_carte_cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A la carte - cancelled</label>
    <type>Checkbox</type>
</CustomField>