force-app/main/default/objects/Account/fields/Account_Autonumber__c.field-meta.xml
<CustomField>
    <fullName>Account_Autonumber__c</fullName>
    <label>Account Autonumber</label>
    <type>AutoNumber</type>
</CustomField>