force-app/main/default/objects/Account/fields/Account_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_c__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>