force-app/main/default/objects/Account/fields/Account_Owner_Office__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Office__c</fullName>
    <formula>TEXT(Owner.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Office</label>
    <type>Text</type>
</CustomField>