force-app/main/default/objects/Account/fields/Account_Owner_Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Team_Role__c</fullName>
    <formula>TEXT(Owner.Team_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Team Role</label>
    <type>Text</type>
</CustomField>