force-app/main/default/objects/Account/fields/Account_Owner_Zone__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Zone__c</fullName>
    <formula>TEXT( Owner.Zone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Zone</label>
    <type>Text</type>
</CustomField>