force-app/main/default/objects/Account/fields/Account_Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Service_End_Date__c</fullName>
    <description>The latest expiration date of an Account&apos;s annual products.</description>
    <label>Account Service End Date</label>
    <type>Date</type>
</CustomField>