force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>1st Year Client</fullName>
            </value>
            <value>
                <fullName>Renewed Client</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Active-Pending Cancel (Pause)</fullName>
            </value>
            <value>
                <fullName>Paused Client</fullName>
            </value>
            <value>
                <fullName>Blacklisted</fullName>
            </value>
            <value>
                <fullName>Business Account</fullName>
            </value>
            <value>
                <fullName>Partner Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>