force-app/main/default/objects/Account/fields/Accountant_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Assigned__c</fullName>
    <label>Accountant Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>