force-app/main/default/objects/Account/fields/Accountant_Summary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accountant_Summary_Notes__c</fullName>
    <label>Accountant Summary Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>