force-app/main/default/objects/Account/fields/Accounting_year_end__c.field-meta.xml
<CustomField>
    <fullName>Accounting_year_end__c</fullName>
    <label>Accounting year end</label>
    <length>100</length>
    <type>Text</type>
</CustomField>