force-app/main/default/objects/Account/fields/Acct_Num_Name__c.field-meta.xml
<CustomField>
    <fullName>Acct_Num_Name__c</fullName>
    <description>Aggregate Acct Number and Name</description>
    <formula>(Account_Number_c__c + &quot; &quot; +  Name)</formula>
    <label>Acct Num Name</label>
    <type>Text</type>
</CustomField>