force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <length>255</length>
    <type>Text</type>
</CustomField>