force-app/main/default/objects/Account/fields/Active_Products__c.field-meta.xml
<CustomField>
    <fullName>Active_Products__c</fullName>
    <label>Active Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>