force-app/main/default/objects/Account/fields/Additional_Products_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products_Needed__c</fullName>
    <label>Additional Products Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Full Service Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Additional Business Return</fullName>
            </value>
            <value>
                <fullName>Additional Personal Return</fullName>
            </value>
            <value>
                <fullName>Other:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>