force-app/main/default/objects/Account/fields/Advisory_1_cancelled__c.field-meta.xml
<CustomField>
    <fullName>Advisory_1_cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory #1 - cancelled</label>
    <type>Checkbox</type>
</CustomField>