force-app/main/default/objects/Account/fields/Advisory_1_Date__c.field-meta.xml
<CustomField>
    <fullName>Advisory_1_Date__c</fullName>
    <label>Advisory #1 Date</label>
    <type>DateTime</type>
</CustomField>