force-app/main/default/objects/Account/fields/Advisory_1_Deliverables_Sent__c.field-meta.xml
<CustomField>
    <fullName>Advisory_1_Deliverables_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory #1 Deliverables Sent</label>
    <type>Checkbox</type>
</CustomField>