force-app/main/default/objects/Account/fields/Advisory_1_needs_to_be_rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Advisory_1_needs_to_be_rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory #1 needs to be rescheduled</label>
    <type>Checkbox</type>
</CustomField>