force-app/main/default/objects/Account/fields/Advisory_2_Completed__c.field-meta.xml
<CustomField>
    <fullName>Advisory_2_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory #2 Completed</label>
    <type>Checkbox</type>
</CustomField>