force-app/main/default/objects/Account/fields/Advisory_2_Date__c.field-meta.xml
<CustomField>
    <fullName>Advisory_2_Date__c</fullName>
    <label>Advisory #2 Date</label>
    <type>Date</type>
</CustomField>