force-app/main/default/objects/Account/fields/Advisory_2_needs_to_be_rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Advisory_2_needs_to_be_rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory #2 needs to be rescheduled</label>
    <type>Checkbox</type>
</CustomField>