force-app/main/default/objects/Account/fields/Advisory_2_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Advisory_2_No_Show__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory #2 No Show</label>
    <type>Checkbox</type>
</CustomField>