force-app/main/default/objects/Account/fields/Advisory__c.field-meta.xml
<CustomField>
    <fullName>Advisory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advisory</label>
    <type>Checkbox</type>
</CustomField>