force-app/main/default/objects/Account/fields/Advisory_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Call_Scheduled_Date__c</fullName>
    <label>Advisory Call Scheduled Date</label>
    <type>DateTime</type>
</CustomField>