force-app/main/default/objects/Account/fields/Advisory_Client__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is an Advisory Client?</description>
    <inlineHelpText>Is an Advisory Client?</inlineHelpText>
    <label>Advisory Client</label>
    <type>Checkbox</type>
</CustomField>