force-app/main/default/objects/Account/fields/Advisory_Status__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Status__c</fullName>
    <description>This status tells us what stage in the Advisory Series the client currently resides in</description>
    <inlineHelpText>The next scheduled meeting for the client&apos;s Advisory Series</inlineHelpText>
    <label>Advisory Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A La Carte</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Advisory #1</fullName>
            </value>
            <value>
                <fullName>Advisory #2</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Cancelled (Paused)</fullName>
                <isActive>false</isActive>
                <label>Cancelled (Paused)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>