force-app/main/default/objects/Account/fields/After_75_Days__c.field-meta.xml
<CustomField>
    <fullName>After_75_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After 75 Days</label>
    <type>Checkbox</type>
</CustomField>