force-app/main/default/objects/Account/fields/Alt_Business_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Alt_Business_Name_1__c</fullName>
    <description>Alternative Business Name 1</description>
    <inlineHelpText>Alternative Business Name 1</inlineHelpText>
    <label>Alt Business Name 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>