force-app/main/default/objects/Account/fields/Alt_Business_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Alt_Business_Name_2__c</fullName>
    <description>Alternative Business Name 2</description>
    <inlineHelpText>Alternative Business Name 2</inlineHelpText>
    <label>Alt Business Name 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>