force-app/main/default/objects/Account/fields/Anniversary_Date_If_Married__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date_If_Married__c</fullName>
    <label>Anniversary Date (If Married)</label>
    <type>Date</type>
</CustomField>