force-app/main/default/objects/Account/fields/Any_other_forms_of_income__c.field-meta.xml
<CustomField>
    <fullName>Any_other_forms_of_income__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Onboarding questions</description>
    <label>Any other forms of income?</label>
    <type>Checkbox</type>
</CustomField>