force-app/main/default/objects/Account/fields/Appointment_Holder__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Holder__c</fullName>
    <label>Appointment Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>