force-app/main/default/objects/Account/fields/Appointment_Setter__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Setter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track who set the appointment that lead to a sale/new account.</description>
    <inlineHelpText>Used to track who set the appointment that lead to a sale/new account.</inlineHelpText>
    <label>Appointment Setter</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Value does not match an active user.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>