force-app/main/default/objects/Account/fields/Approximate_monthly_revenue__c.field-meta.xml
<CustomField>
    <fullName>Approximate_monthly_revenue__c</fullName>
    <description>Approximate monthly revenue</description>
    <inlineHelpText>Approximate monthly revenue</inlineHelpText>
    <label>Approximate Monthly Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-1,000</fullName>
            </value>
            <value>
                <fullName>1,000-5,000</fullName>
            </value>
            <value>
                <fullName>5,000-10,000</fullName>
            </value>
            <value>
                <fullName>10,000&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>