force-app/main/default/objects/Account/fields/Appt_Setter__c.field-meta.xml
<CustomField>
    <fullName>Appt_Setter__c</fullName>
    <label>Appt Setter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>