force-app/main/default/objects/Account/fields/Are_there_any_partners__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_partners__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Onboarding questions</description>
    <label>Are there any partners?</label>
    <type>Checkbox</type>
</CustomField>