force-app/main/default/objects/Account/fields/Articles_of_Organization_EIN_Letter__c.field-meta.xml
<CustomField>
    <fullName>Articles_of_Organization_EIN_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Articles of Organization/EIN Letter</label>
    <type>Checkbox</type>
</CustomField>