force-app/main/default/objects/Account/fields/Audit_Protection__c.field-meta.xml
<CustomField>
    <fullName>Audit_Protection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Protection</label>
    <type>Checkbox</type>
</CustomField>