force-app/main/default/objects/Account/fields/Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Routing_Number__c</fullName>
    <label>Bank Routing Number</label>
    <length>32</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>