force-app/main/default/objects/Account/fields/Bank_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transactions__c</fullName>
    <label>Bank Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>