force-app/main/default/objects/Account/fields/Bark_ID__c.field-meta.xml
<CustomField>
    <fullName>Bark_ID__c</fullName>
    <label>Bark ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>