force-app/main/default/objects/Account/fields/Bark_Questions__c.field-meta.xml
<CustomField>
    <fullName>Bark_Questions__c</fullName>
    <description>Data added from the record when they get created by Bark</description>
    <label>Bark Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>