force-app/main/default/objects/Account/fields/Basic_Bookkeeping__c.field-meta.xml
<CustomField>
    <fullName>Basic_Bookkeeping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basic Bookkeeping</label>
    <type>Checkbox</type>
</CustomField>