force-app/main/default/objects/Account/fields/Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Batch_Code__c</fullName>
    <label>Batch Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>