force-app/main/default/objects/Account/fields/behalf__Behalf_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>behalf__Behalf_Account_ID__c</fullName>
    <label>Behalf Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>