force-app/main/default/objects/Account/fields/behalf__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>behalf__Company_Name__c</fullName>
    <label>Company Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>