force-app/main/default/objects/Account/fields/Bill62__Automatically_Created__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Automatically_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Created</label>
    <type>Checkbox</type>
</CustomField>