force-app/main/default/objects/Account/fields/Bill62__Head_of_Household__c.field-meta.xml
<CustomField>
    <fullName>Bill62__Head_of_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Household</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Households</relationshipLabel>
    <relationshipName>Households</relationshipName>
    <type>Lookup</type>
</CustomField>