force-app/main/default/objects/Account/fields/Bill62_Initial_Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill62_Initial_Subscription_Date__c</fullName>
    <formula>Primary_Contact__r.Bill62_Initial_Payment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill62 Initial Subscription Date</label>
    <type>Date</type>
</CustomField>