force-app/main/default/objects/Account/fields/Bill62_Total_Processed_Payments_date__c.field-meta.xml
<CustomField>
    <fullName>Bill62_Total_Processed_Payments_date__c</fullName>
    <formula>Primary_Contact__r.Bill62_Total_Processed_Payments_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill62 Total Processed Payments (date)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>