force-app/main/default/objects/Account/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <label>Billing System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill62</fullName>
            </value>
            <value>
                <fullName>ChargeOver</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>