force-app/main/default/objects/Account/fields/BK_Specialist__c.field-meta.xml
<CustomField>
    <fullName>BK_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BK Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsB8EL</relationshipName>
    <type>Lookup</type>
</CustomField>