force-app/main/default/objects/Account/fields/BK_Status__c.field-meta.xml
<CustomField>
    <fullName>BK_Status__c</fullName>
    <label>BK Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Attempted</fullName>
                <isActive>false</isActive>
                <label>Attempted</label>
            </value>
            <value>
                <fullName>BK Attempted</fullName>
                <isActive>false</isActive>
                <label>BK Attempted</label>
            </value>
            <value>
                <fullName>BK Contacted</fullName>
                <isActive>false</isActive>
                <label>BK Contacted</label>
            </value>
            <value>
                <fullName>CBC Followup</fullName>
                <isActive>false</isActive>
                <label>CBC Followup</label>
            </value>
            <value>
                <fullName>CBC Qualified</fullName>
                <isActive>false</isActive>
                <label>CBC Qualified</label>
            </value>
            <value>
                <fullName>CBC Scheduled</fullName>
                <isActive>false</isActive>
                <label>CBC Scheduled</label>
            </value>
            <value>
                <fullName>Contacted</fullName>
                <isActive>false</isActive>
                <label>Contacted</label>
            </value>
            <value>
                <fullName>Follow-Up</fullName>
            </value>
            <value>
                <fullName>FSBK Followup</fullName>
                <isActive>false</isActive>
                <label>FSBK Followup</label>
            </value>
            <value>
                <fullName>FSBK Qualified</fullName>
                <isActive>false</isActive>
                <label>FSBK Qualified</label>
            </value>
            <value>
                <fullName>FSBK Scheduled</fullName>
                <isActive>false</isActive>
                <label>FSBK Scheduled</label>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Secured Payment Method</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>