force-app/main/default/objects/Account/fields/BK_System__c.field-meta.xml
<CustomField>
    <fullName>BK_System__c</fullName>
    <label>BK System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QBO</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
            <value>
                <fullName>Wave</fullName>
            </value>
            <value>
                <fullName>Bookkeeper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>