force-app/main/default/objects/Account/fields/BNA_1_1_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>BNA_1_1_Scheduled__c</fullName>
    <label>BNA 1-1 Scheduled</label>
    <type>DateTime</type>
</CustomField>