force-app/main/default/objects/Account/fields/BNA_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>BNA_Call_Status__c</fullName>
    <label>BNA Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Pitched</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Do Not Call again</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>1-1 Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>