force-app/main/default/objects/Account/fields/BNA_Consulted_By__c.field-meta.xml
<CustomField>
    <fullName>BNA_Consulted_By__c</fullName>
    <label>BNA Consulted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>