force-app/main/default/objects/Account/fields/BNA_Notes__c.field-meta.xml
<CustomField>
    <fullName>BNA_Notes__c</fullName>
    <label>BNA Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>