force-app/main/default/objects/Account/fields/BNA_Pitched_Date__c.field-meta.xml
<CustomField>
    <fullName>BNA_Pitched_Date__c</fullName>
    <label>BNA Pitched Date</label>
    <type>Date</type>
</CustomField>