force-app/main/default/objects/Account/fields/BoA_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>BoA_Transfer_Date__c</fullName>
    <label>BoA Transfer Date</label>
    <type>Date</type>
</CustomField>