force-app/main/default/objects/Account/fields/BoA_transferor__c.field-meta.xml
<CustomField>
    <fullName>BoA_transferor__c</fullName>
    <label>BoA transferor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>