force-app/main/default/objects/Account/fields/Bookkeeping_Advisory_Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Advisory_Onboarding_Date__c</fullName>
    <description>The date the client completed the Bookkeeping Advisory Onboarding appointment</description>
    <label>Bookkeeping Advisory Onboarding Date</label>
    <type>DateTime</type>
</CustomField>