force-app/main/default/objects/Account/fields/Bookkeeping_Interest_Date__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Interest_Date__c</fullName>
    <description>Date the client indicated they were interested in learning more about Bookkeeping services. Used to trigger email communications around bookkeeping services.</description>
    <label>Bookkeeping Interest Date</label>
    <type>Date</type>
</CustomField>