force-app/main/default/objects/Account/fields/Bookkeeping_Onboarding_Date__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Onboarding_Date__c</fullName>
    <description>The date the client completed their Bookkeeping Onboarding appointment</description>
    <label>Bookkeeping Onboarding Date</label>
    <type>DateTime</type>
</CustomField>