force-app/main/default/objects/Account/fields/Bookkeeping_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_Software_Used__c</fullName>
    <label>Bookkeeping Software Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Quicken</fullName>
            </value>
            <value>
                <fullName>Freshbooks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>